# HammerEngine

./: LICENSE  README.md  build.sh  setup_and_build.bat
.github/: pull_request_template.md
demo/2d_colliders/: CMakeLists.txt  test.cpp
demo/2d_world/: CMakeLists.txt  test.cpp
demo/2d_world/shaders/: frag.frag  frag.spv  vert.vert
demo/3d_colliders/: CMakeLists.txt  test.cpp
demo/3d_model/: CMakeLists.txt  voxel_Engine
demo/3d_world/: CMakeLists.txt  test.cpp
demo/3d_world/shaders/: frag.frag
demo/3d_world_moveMesh/: CMakeLists.txt  test.cpp
docs/: Tutorial2d.md
include/HammerEngine/: HammerEngine.h  HammerRect.h
scr/: HammerBuffers.cpp  HammerEngine.cpp  HammerUtility.cpp
src/: HammerEngine.cpp
